--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,16 @@
     <body>
         <div>
             <div class='center'>
-                <div class='title'>DEMO YOUR ML MODEL</div>
+                <div class='title'>Classify face emotions</div>
+                <p>
+      Upload a human face with one of the following emotions: <strong>angry</strong>, <strong>happy</strong>, <strong>sad</strong>, <strong>boring</strong>, <strong>thinking</strong>.
+    
+    </p>
+    <br>
+    <p>
+    I created this model with deep learning with fastai with only 355 images in the training set for the all 5 types of emotions, so the results might improve with a larger training set.
+    </p>
+
                 <div class='content'>
                     <div class='no-display'>
                         <input id='file-input'
